<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fuel Account</string>
    <string name="edit_message">Test Message.</string>
    <!-- Main Menu -->
    <string name="menu_main_vehicless">Vehicles</string>
    <string name="menu_main_stations">Stations</string>
    <!-- Vehicles -->
    <string name="vehicle_manufacturer">Manufacturer</string>
    <string name="vehicle_model">Model</string>
    <string name="vehicle_registration">Registration</string>
    <string name="button_add_vehicle">Add</string>
    <string name="button_done_vehicle">Done</string>
    <!-- Stations -->
    <string name="station_name">Station Name</string>
    <string name="station_petrol_company">Petrol Company</string>
    <string name="station_post_code">Post Code</string>
    <string name="button_add_station">Add</string>
    <string name="button_done_station">Done</string>
    <!-- Message -->
    <string name="menu_display_message_settings">Settings</string>
    <string name="title_activity_display_message">Message</string>

</resources>