<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/vehicle_manufacturer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/vehicle_manufacturer" />

    <EditText
        android:id="@+id/vehicle_model"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/vehicle_model" >
    </EditText>

    <EditText
        android:id="@+id/vehicle_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/vehicle_registration" >
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button_done_vehicle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:text="@string/button_done_vehicle" >
        </Button>
    </LinearLayout>

</LinearLayout>